...
            </objects>
            <point key="canvasLocation" x="4665" y="1154"/>
        </scene>
        <!--Create Ticket-->
        <scene sceneID="vSk-qG-X9s">
            <objects>
                <viewController storyboardIdentifier="createTicketId" title="Create Ticket" id="Skt-rV-plB" customClass="CreateTicketViewController" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="4Lv-2v-k7D"/>
                        <viewControllerLayoutGuide type="bottom" id="8hS-cV-6xs"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="kqZ-8u-ahc">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="axV-jO-YCH">
                                <rect key="frame" x="101" y="464" width="155" height="41"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <color key="backgroundColor" red="1" green="0.61879034259999999" blue="0.94335221550000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="Submit">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="submitButton:" destination="Skt-rV-plB" eventType="touchUpInside" id="5Tn-PO-p9o"/>
                                </connections>
                            </button>
...
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    </view>
                    <navigationItem key="navigationItem" title="Inbox" id="ySC-yL-sE0">
                        <barButtonItem key="leftBarButtonItem" title="showMenu" id="soV-kM-pmi"/>
                    </navigationItem>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                    <connections>
                        <outlet property="sidebarButton" destination="soV-kM-pmi" id="98C-fV-3W4"/>
                    </connections>
...
                    </connections>
                </navigationController>
                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="vGJ-7N-nvR">
                    <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                    <items>
                        <barButtonItem title="Item" id="Vw5-Ju-XMg"/>
                    </items>
                </toolbar>
                <placeholder placeholderIdentifier="IBFirstResponder" id="BTa-oM-INq" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="985" y="1038"/>
        </scene>
...
